Add footer and GitHub link; update styles
Add a GitHub icon link to the header and replace the duplicated disclaimer with a new footer containing the disclaimer, a "Please Star in Github" link, and a small "made with ❤️" note. Remove the duplicate disclaimer div in index.html. Update styles.css: reduce Discord icon size, add .github-link styling and hover effect, add footer/.footer-line/.heart styles, and adjust container bottom margin for spacing.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </div>
       <div class="header-right">
           <span class="author-text">by SupremeMuhit</span>
+          <a href="https://github.com/SupremeMuhit/Bulk-Discord-Invite-Validator" target="_blank" class="github-link" title="View on GitHub">
+              <i class="fa-brands fa-github"></i>
+          </a>
           <a href="https://discord.com/users/1341440502104592507" target="_blank" class="discord-link" title="Contact on Discord">
               <i class="fa-brands fa-discord"></i>
           </a>
@@ -84,11 +87,14 @@
           <div id="single-result-container"></div>
       </div>
 
-      <div class="disclaimer">
-      <div class="disclaimer">
-        <p>Disclaimer: Results may be wrong due to API caching or rate limits. Please double check critical links.</p>
-      </div>
     </div>
+    
+    <footer>
+        <p class="footer-line">Disclaimer: Results may be wrong due to API caching or rate limits. Please double check critical links.</p>
+        <p class="footer-line"><a href="https://github.com/SupremeMuhit/Bulk-Discord-Invite-Validator" target="_blank">Please Star in Github 🌟</a></p>
+        <p class="footer-line heart">made with ❤️</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
