Improve invite checker UI and robustness
Refactor UI and JS to improve usability and reliability. Move the "Copy Invalid" button into the Invalid Invites header and style it as a small action button; update styles for section headers and the small button. Rework script.js: normalize input trimming, reset and update stats via updateStats(), add explicit 429 handling and a 1s delay between API requests to reduce rate-limiting, improve error handling and rendering for valid/invalid/single-invite views, and add JSON copy support for single invite results. Update README with a usage link. Changes touch README.md, index.html, script.js, and styles.css.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
           
           <div class="controls">
               <button onclick="checkInvites()">Check Invites</button>
-              <button onclick="copyInvalidInvites()" id="copyInvalidBtn" style="display: none; background-color: #f04747;">Copy Invalid Links</button>
           </div>
 
           <div id="stats-dashboard" style="display: none;">
@@ -68,7 +67,10 @@
               <div id="validInvites" class="invite-list"></div>
             </div>
             <div class="result-section">
-              <h2>Invalid Invites</h2>
+              <div class="section-header">
+                <h2>Invalid Invites</h2>
+                <button onclick="copyInvalidInvites()" id="copyInvalidBtn" class="sm-btn" style="display: none;">Copy</button>
+              </div>
               <div id="invalidInvites" class="invite-list"></div>
             </div>
             <div class="result-section">
